<resources>
    <string name="app_name">Produção Fácil</string>

    <string name="facebook_app_id" translatable="false">124969894738879</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb124969894738879</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Acesse ou registre-se</string>
    <string name="action_sign_in_short">Acesse</string>
    <string name="error_invalid_email">Este endereço de email é inválido.</string>
    <string name="error_invalid_password">Esta senha é muito curta</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="error_field_required_and_bigger_than_0">Este campo é obrigatório e deve ser maior que 0</string>
    <string name="sign_in_cancelled">Você cancelou o login</string>
    <string name="no_internet_connection">Você precisa estar conectado a internet.</string>
    <string name="unknown_error">Erro desconhecido.</string>
    <string name="unknown_sign_in_response">Erro desconhecido ao logar.</string>
    <string name="sing_in_success">Logou com sucesso.</string>

    <string name="button_add_farm">Botão adicionar Fazenda</string>
    <string name="new_farm">Nova Fazenda</string>
    <string name="text_cancel">Cancelar</string>
    <string name="text_save">Salvar</string>
    <string name="farm_name">Nome da Fazenda</string>
    <string name="logout">Deslogar</string>
    <string name="about">Sobre</string>
    <string name="edit">Editar</string>
    <string name="delete">Deletar</string>
    <string name="field_name">Nome do Talhão</string>
    <string name="button_add_field">Botão adicionar talhão</string>
    <string name="new_field">Novo Talhão</string>
    <string name="total_area">Área total em Hectares (ha)</string>
    <string name="production_farms_two_dots">Produção para área:</string>
    <string name="season">Safra</string>
    <string name="farms">Fazendas</string>
    <string name="fiels">Talhões</string>
    <string name="seasons">Safras</string>
    <string name="new_season">Nova Safra</string>
    <string name="field">Talhão</string>
    <string name="farm">Fazenda</string>
    <string name="season_start">Ano início</string>
    <string name="season_end">Ano fim</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="new_cultivation">Nova Cultura</string>
    <string name="cultivation">Cultura</string>
    <string name="cultivation_name">Nome da cultura</string>
    <string name="cultivations">Culturas</string>
    <string name="version">Versão %1$s</string>
    <string name="description">Aplicativo desenvolvido para o Android Nanodegree da Udacity.</string>
    <string name="developed_by">Desenvolvido por: <u>Iuri Menin</u></string>
    <string name="url_iuri">https://iurimenin.github.io/</string>
    <string name="bags">Sacas</string>
    <string name="new_production">Nova Produção</string>
    <string name="production">Produção</string>
    <string name="total_production">Produção Total</string>
    <string name="total_production_dots">Produção Total:</string>
    <string name="bags_per_hectare">Sacas/Hectare</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_widget_list">Você ainda não informou nenhuma produção</string>
    <string name="last_productions">Ultimas produções informadas</string>

</resources>
