<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:orderInCategory="1"
        android:title="@string/about"
        android:id="@+id/menuMainItemAbout"
        android:menuCategory="container"
        android:icon="@drawable/ic_information_outline_white_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:orderInCategory="2"
        android:title="@string/logout"
        android:menuCategory="container"
        android:id="@+id/menuMainItemLogout"
        android:icon="@drawable/ic_logout_white_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:visible="false"
        android:orderInCategory="3"
        android:title="@string/edit"
        android:menuCategory="container"
        android:id="@+id/menuMainItemEdit"
        android:icon="@drawable/ic_edit_white_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:visible="false"
        android:orderInCategory="4"
        android:title="@string/delete"
        android:menuCategory="container"
        android:id="@+id/menuMainItemDelete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="ifRoom"/>
</menu>