<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/touch_selector_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:paddingLeft="@dimen/list_item_padding_horizontal_material"
        android:paddingRight="@dimen/list_item_padding_horizontal_material"
        android:orientation="horizontal">

        <TextView
            android:padding="8dp"
            android:id="@+id/textViewWidgetCultivation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/cultivation_name"/>

        <TextView
            android:padding="8dp"
            android:id="@+id/textViewWidgetBags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/bags"/>

        <TextView
            android:padding="8dp"
            android:id="@+id/textViewWidgetSeason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/season"/>

    </LinearLayout>
</FrameLayout>