<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutActivityField"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.production.view.ProductionActivity">

    <TextView
        android:id="@+id/textViewFieldName"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:text="@string/field_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <com.malinskiy.superrecyclerview.SuperRecyclerView
        android:id="@+id/superRecyclerViewCultivation"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toTopOf="@+id/textViewTotalProductionLabel"
        app:layout_constraintEnd_toEndOf="@id/textViewFieldName"
        app:layout_constraintStart_toStartOf="@id/textViewFieldName"
        app:layout_constraintTop_toBottomOf="@id/textViewFieldName"
        app:scrollbarStyle="insideInset" />

    <TextView
        android:id="@+id/textViewTotalProductionLabel"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:text="@string/total_production_dots"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textViewTotalProduction" />

    <TextView
        android:id="@+id/textViewTotalProduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/total_production"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButtonAddProduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/button_add_field"
        app:srcCompat="@android:drawable/ic_menu_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
